<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SignUpForm</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm">Confirm Password</string>
    <string name="btn_save">Save</string>
    <string name="welcome_text">Welcome!</string>
</resources>
