<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/displayTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text"
            android:textStyle="bold"
            android:textSize="18sp"
            android:paddingBottom="16dp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="8dp" />

        <Spinner
            android:id="@+id/spProgram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/programs_array"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/etConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_confirm"
            android:inputType="textPassword"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/clickMeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_save"
            android:layout_marginTop="16dp" />
    </LinearLayout>
</ScrollView>
